Updates REQ file to include all package/package versions used

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-pandas 		0.24.2
-pip install pandas==0.24.2
-pip install numpy==1.16.2
-pip install tabulate==
-pip install pprint==
-pip install win32com==
+pip install pandas==0.25.3
+pip install numpy==1.17.4
+pip install tabulate==0.8.5
+pip install pywin32==227
+pip install pip install python-dateutil==2.8.1
+pip install pytz==2019.3
+pip install setuptools==41.6.0
+pip install six==1.13.0  
+pip install wheel==0.33.6
+pip install xlrd==1.2.0
+pip install XlsxWriter==1.2.5
